[tool.poetry]
name = "super-mario-game"
version = "0.1.0"
description = ""
authors = ["Murtaza Lightwala <murtaza.lightwala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
PyTMX = "^3.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
